--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,36 +1,81 @@
 #header{
-    padding: 20px;
-    .left{
-        .image{
-            margin-left: 20px;
-        }
+    #page-wrap {
+        text-align: center;
+        overflow: auto;
     }
-    .right{
-        margin: auto;
-        .main{
-            margin-top: 10px;
-            margin-right: 30px;
-            li{
-                margin-left: 70px;
-                font-size: 16px;
-                cursor: pointer;
-                transition: 0.3s ease-in-out;
-                font-family: 'Times New Roman', Times, serif;
-                &:hover{
-                    color: #F59249;
+    .bm-item {
+        display: inline-block;
+        margin-bottom: 10px;
+        color: black;
+        font-size: 16px;
+        cursor: pointer;
+        transition: 0.3s ease-in-out;
+        font-family: 'Times New Roman', Times, serif;
+    }
+    .bm-burger-button {
+        position: absolute;
+        width: 22px;
+        height: 18px;
+        left: 100px;
+        top: 36px;
+    }
+    .bm-burger-bars {
+        background: #373a47;
+    }
+    .bm-cross-button {
+        height: 24px;
+        width: 24px;
+    }
+    .bm-cross {
+        background: #bdc3c7;
+    }
+    .bm-menu {
+        background: #FFFFFF;
+        padding: 2.5em 1.5em 0;
+        font-size: 1.15em;
+    }
+    .bm-morph-shape {
+        fill: #373a47;
+    }
+    .bm-item-list {
+        color: #b8b7ad;
+    }
+    .bm-overlay {
+        background: rgba(0, 0, 0, 0.3);
+    }
+    #navbar{
+        padding: 20px;
+        .left{
+            .image{
+                margin-left: 20px;
+            }
+        }
+        .right{
+            margin: auto;
+            .main{
+                margin-top: 10px;
+                margin-right: 30px;
+                li{
+                    margin-left: 70px;
+                    font-size: 16px;
+                    cursor: pointer;
+                    color: black;
+                    transition: 0.3s ease-in-out;
+                    font-family: 'Times New Roman', Times, serif;
+                    &:hover{
+                        color: #F59249;
+                    }
+                }
+            }
+            .icons{
+                margin : auto;
+                margin-top: 12px;
+                i{
+                    margin-left: 15px;
+                    cursor: pointer;
+                    font-size: 16px;
                 }
             }
         }
-        .icons{
-            margin : auto;
-            margin-top: 12px;
-            i{
-                margin-left: 15px;
-                cursor: pointer;
-                font-size: 16px;
-            }
-        }
     }
-    
-    
 }
