--- a/src/components/Duis/duis.scss
+++ b/src/components/Duis/duis.scss
@@ -43,21 +43,137 @@
         }
         ul{
             li{
-                p{
+                span{
+                    color: black;
+                }
+            }
+        }
+        h4{
+            font-size: 2rem;
+            margin-top: -10px;
+            font-family: "Crimson Text", serif;
+        }
+        ol{
+            li{
+                span{
                     color: black;
                 }
             }
         }
         h6{
-            font-size: 30px;
-            font-weight: normal;
+            font-family: "DM Sans", sans-serif;
+            font-size: 1rem;
+            font-weight: 600;
+            margin-bottom: 0.3125rem;
         }
-        ol{
-            li{
-                a{
-                    text-decoration: none;
-                    color: black;
+    }
+    .text2{
+        img{    
+            width: 60px;
+            cursor: pointer;
+            height: 60px;
+        }
+        .text3{
+            margin-left: 20px;
+            h5{
+                font-size: 17px;
+                margin-right: 10px;
+            }
+            span{
+                color: #7E8492;
+                font-size: .75rem;
+            }
+            p{
+                margin-top: 10px;
+                font-size: 15pxx;
+                color: black;
+                transition: 0.3s ease-in-out;
+            }
+        }
+    }
+    .boxes4{
+        border: 1px solid #EDEEF5;
+        padding: 50px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        h6{
+            margin-top: 10px;
+        }
+        h4{
+            font-size: 20px;
+            font-weight: 400;
+        }
+        p{
+            font-size: 14px;
+            color: rgb(160, 160, 160);
+        }
+        textarea{
+            margin-top: 10px;
+            border-radius: 6px;
+            outline: none;
+            border: none;
+            padding: 20px;
+            background-color: #F8F8F8;
+            width: 100%;
+            height: 45vh;
+        }
+        form{
+            input{
+              margin-top: 10px;
+              border-radius: 6px;
+              outline: none;
+              border: none;
+              background-color: #F8F8F8;
+              width: 100%;
+              height: 7vh;
+              padding: 20px;
+            }
+        }
+        .text4{
+            form{
+                input{
+                  margin-top: 10px;
+                  border-radius: 6px;
+                  outline: none;
+                  border: none;
+                  background-color: #F8F8F8;
+                  width: 100%;
+                  height: 7vh;
+                  padding: 20px;
                 }
+            }
+        }
+        .text5{
+            form{
+                input{
+                  margin-top: 10px;
+                  border-radius: 6px;
+                  outline: none;
+                  border: none;
+                  background-color: #F8F8F8;
+                  width: 100%;
+                  height: 7vh;
+                  padding: 20px;
+                }
+            }
+        }
+        .boxes5{
+            margin-top: 20px;
+            label{
+                margin-left: 10px;
+            }
+        }
+        .boxes6{
+            input{
+                padding-left: 3.25rem;
+                padding-right: 3.25rem;
+                font-size: .8125rem;
+                height: 3rem;
+                background-color: black;
+                outline: none;
+                border: none;
+                color: white;
+                margin-top: 20px;
             }
         }
     }
@@ -255,7 +371,7 @@
             }
         }
     }
-    .boxes4{
+    .boxes6{
         margin-top: 40px;
         margin-left: 10px;
         h4{
