--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,81 +1,189 @@
-#header{
-    #page-wrap {
-        text-align: center;
-        overflow: auto;
+#header {
+  #page-wrap {
+    text-align: center;
+    overflow: auto;
+  }
+  .bm-item {
+    display: inline-block;
+    margin-bottom: 10px;
+    color: black;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+    font-family: "Times New Roman", Times, serif;
+  }
+  .bm-burger-button {
+    position: absolute;
+    width: 22px;
+    height: 18px;
+    left: 100px;
+    top: 36px;
+  }
+  .bm-burger-bars {
+    background: #373a47;
+  }
+  .bm-cross-button {
+    height: 24px;
+    width: 24px;
+  }
+  .bm-cross {
+    background: #bdc3c7;
+  }
+  .bm-menu {
+    background: #ffffff;
+    padding: 2.5em 1.5em 0;
+    font-size: 1.15em;
+  }
+  .bm-morph-shape {
+    fill: #373a47;
+  }
+  .bm-item-list {
+    color: #b8b7ad;
+  }
+  .bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+  }
+  #navbar {
+    padding: 20px;
+    .left {
+      .image {
+        margin-left: 20px;
+      }
     }
-    .bm-item {
-        display: inline-block;
-        margin-bottom: 10px;
-        color: black;
-        font-size: 16px;
-        cursor: pointer;
-        transition: 0.3s ease-in-out;
-        font-family: 'Times New Roman', Times, serif;
-    }
-    .bm-burger-button {
-        position: absolute;
-        width: 22px;
-        height: 18px;
-        left: 100px;
-        top: 36px;
-    }
-    .bm-burger-bars {
-        background: #373a47;
-    }
-    .bm-cross-button {
-        height: 24px;
-        width: 24px;
-    }
-    .bm-cross {
-        background: #bdc3c7;
-    }
-    .bm-menu {
-        background: #FFFFFF;
-        padding: 2.5em 1.5em 0;
-        font-size: 1.15em;
-    }
-    .bm-morph-shape {
-        fill: #373a47;
-    }
-    .bm-item-list {
-        color: #b8b7ad;
-    }
-    .bm-overlay {
-        background: rgba(0, 0, 0, 0.3);
-    }
-    #navbar{
-        padding: 20px;
-        .left{
-            .image{
-                margin-left: 20px;
-            }
+    .right {
+      margin: auto;
+      .main {
+        margin-top: 10px;
+        margin-right: 30px;
+        li {
+          margin-left: 70px;
+          font-size: 16px;
+          cursor: pointer;
+          color: black;
+          transition: 0.3s ease-in-out;
+          font-family: "Times New Roman", Times, serif;
+          &:hover {
+            color: #f59249;
+          }
         }
-        .right{
-            margin: auto;
-            .main{
-                margin-top: 10px;
-                margin-right: 30px;
-                li{
-                    margin-left: 70px;
-                    font-size: 16px;
-                    cursor: pointer;
-                    color: black;
-                    transition: 0.3s ease-in-out;
-                    font-family: 'Times New Roman', Times, serif;
-                    &:hover{
-                        color: #F59249;
+      }
+      .icons {
+        margin: auto;
+        margin-top: 12px;
+        z-index: 99999;
+        i {
+          margin-left: 15px;
+          cursor: pointer;
+          font-size: 16px;
+        }
+        .cart {
+          margin-top: -3px;
+          font-size: 15px;
+          cursor: pointer;
+          position: relative;
+          transition: 0.3s ease-in-out;
+          &:hover {
+            .box {
+              visibility: visible;
+              opacity: 1;
+              margin-top: 0px;
+            }
+          }
+          .box {
+            border-top: 2px solid #EF4626;
+            background-color: white;
+            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            color: black;
+            width: 350px;
+            position: absolute;
+            top: 60px;
+            right: 0px;
+            z-index: 9999;
+            visibility: hidden;
+            opacity: 0;
+            padding: 20px;
+            transition: 0.3s ease-in-out;
+            margin-top: 10px;
+            .top {
+              .header6 {
+                font-weight: bold;
+                font-size: 18px;
+              }
+            }
+
+            .center {
+              .samsung {
+                font-size: 15px;
+              }
+
+              .price {
+                color: #EF4626;
+                font-size: 18px;
+              }
+            }
+
+            .bottom {
+              .text {
+                padding: 10px 0px;
+
+                .total {
+                  font-weight: 600;
+                  font-size: 16px;
+                }
+
+                .money {
+                  display: flex;
+                  justify-content: end;
+                  color: #EF4626;
+                  font-weight: 600;
+                }
+              }
+
+              .buttonDiv {
+                width: 90%;
+                margin: auto;
+
+                button {
+                  width: 100%;
+                  padding: 10px 0px;
+                  margin: 10px 0px;
+                  border: 1px solid transparent;
+                  outline: none;
+                  font-weight: 600;
+                  transition: 0.3s ease-in-out;
+
+                  &.view {
+                    background-color: transparent;
+                    border: 1px solid rgb(197, 197, 197);
+                    a{
+                        color: black;
+                        text-decoration: none;
                     }
+                    &:hover {
+                      background-color: black;
+                      a{
+                        color: white;
+                      }
+                    }
+                  }
+                  &.check {
+                    border: 1px solid rgb(197, 197, 197);
+                    background-color: #EF4626;
+                    a {
+                      text-decoration: none;
+                      color: white;
+                    }
+                    &:hover {
+                      color: white;
+                      background-color: black;
+                    }
+                  }
                 }
+              }
             }
-            .icons{
-                margin : auto;
-                margin-top: 12px;
-                i{
-                    margin-left: 15px;
-                    cursor: pointer;
-                    font-size: 16px;
-                }
-            }
+          }
         }
+      }
     }
+  }
 }
