--- a/src/components/Products/product.scss
+++ b/src/components/Products/product.scss
@@ -55,6 +55,7 @@
                             visibility: hidden;
                             transform: translateX(30px);
                             transition: 0.3s ease-in-out;
+                            color: black;
                             &:hover{
                                 background-color: #EF4626;
                                 color: white;
