--- a/src/components/Products/product.scss
+++ b/src/components/Products/product.scss
@@ -116,4 +116,42 @@
         }
         
     }
+    .swiper-button-next:after,
+    .swiper-button-prev:after {
+        color: grey;
+        font-size: 12px;
+        // display: none;
+        background-color: rgb(197, 192, 192);
+        opacity: 0.7;
+        padding: 20px;
+        margin: 7px;
+        transition: 0.4;
+    }
+
+    .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+
+        /* Center slide text vertically */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+    }
+
+    .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
