--- a/src/components/Shop/shop.scss
+++ b/src/components/Shop/shop.scss
@@ -1,99 +1,207 @@
 #shop {
-    .top {
-        width: 100%;
-        height: 30vh;
+  .top {
+    background-image: url("https://cdn.pixabay.com/photo/2020/01/05/20/06/lipstick-4743984_960_720.jpg");
+    width: 100%;
+    height: 500px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 50px;
+    position: relative;
+    opacity: 0.6;
+    background-color: #fae4e1;
+    .box {
+      padding-top: 100px;
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 500px;
+      text-align: center;
+      .image {
+        width: 13%;
+        margin: auto;
+        p {
+          color: #ee2d7a;
+          font-size: 16px;
+          opacity: 1;
+          margin-top: 20px;
+        }
+      }
+      .bottom {
+        width: 60%;
+        margin: auto;
+        h1 {
+          color: black;
+          font-size: 60px;
+        }
+        p {
+          margin-top: 40px;
+          color: black;
+          font-weight: 600;
+        }
+      }
+    }
+  }
+  .bottom {
+    .box {
+      margin-bottom: 20px;
+
+      h4 {
+        border-bottom: 2px solid #626262;
+        margin-bottom: 1.875rem;
+        font-family: "DM Sans", sans-serif;
+        font-size: 0.75rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        padding-bottom: 1.25rem;
+        line-height: 1.2;
+      }
+
+      p {
+        font-size: 17px;
+      }
+    }
+    .box2 {
+      margin-bottom: 20px;
+      h3 {
+        border-bottom: 2px solid #ed1b6f;
+        padding-bottom: 10px;
+      }
+
+      .css-187mznn-MuiSlider-root {
+        border-radius: 12px;
+        box-sizing: content-box;
+        display: inline-block;
         position: relative;
+        cursor: pointer;
+        touch-action: none;
+        color: #ed1b6f;
+        -webkit-tap-highlight-color: transparent;
+        height: 4px;
         width: 100%;
-        padding-bottom: 50px;
-        margin-bottom: 100px;
-
-        .image {
-            img {
-                position: absolute;
-                top: 0%;
-                left: 0%;
-                opacity: 0.4;
-                z-index: -111;
-                height: 100%;
-                background-color: #ffc1da;
-            }
-        }
-
-        .text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: black;
-            z-index: 9999999;
-        }
+        padding: 13px 0;
+      }
+      button {
+        margin-top: 20px;
+        margin-left: 10px;
+        padding: 8px 30px;
+        background-color: #ed1b6f;
+        color: white;
+        border-radius: 30px;
+        border: none;
+      }
     }
+    .box3 {
+      margin-bottom: 20px;
 
-    .bottom {
-        .box {
-            margin-bottom: 20px;
+      h4 {
+        border-bottom: 2px solid #626262;
+        margin-bottom: 1.875rem;
+        font-family: "DM Sans", sans-serif;
+        font-size: 0.75rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        padding-bottom: 1.25rem;
+        line-height: 1.2;
+      }
 
-            h4 {
-                border-bottom: 2px solid #626262;
-                margin-bottom: 1.875rem;
-                font-family: "DM Sans", sans-serif;
-                font-size: .75rem;
-                font-weight: 600;
-                text-transform: uppercase;
-                padding-bottom: 1.25rem;
-                line-height: 1.2;
-            }
-
-            p {
-                font-size: 17px;
-            }
-
-        }
-
-        .box2 {
-            margin-bottom: 20px;
-            h3 {
-                border-bottom: 2px solid #ED1B6F;
-                padding-bottom: 10px;
-            }
-
-            .css-187mznn-MuiSlider-root {
-                border-radius: 12px;
-                box-sizing: content-box;
-                display: inline-block;
-                position: relative;
-                cursor: pointer;
-                touch-action: none;
-                color: #ED1B6F;
-                -webkit-tap-highlight-color: transparent;
-                height: 4px;
-                width: 100%;
-                padding: 13px 0;
-            }
-            button{
-                margin-top: 20px;
-                margin-left: 10px;
-                padding: 8px 30px;
-                background-color: #ED1B6F;
-                color: white;
-                border-radius: 30px;
-                border: none;
-            }
-        }
-        .box3 {
-            margin-bottom: 20px;
-
-            h3 {
-                border-bottom: 2px solid #ED1B6F;
-                padding-bottom: 10px;
-            }
-
-            p {
-                font-size: 17px;
-                color: grey;
-            }
-
-        }
+      p {
+        font-size: 17px;
+      }
     }
-
+    .bottom1{
+      // width: 100%;
+      // margin-left: -10px;
+      .containerr{
+          // width: 100%;
+          // margin: auto;
+          .box {
+              // padding: 35px 10px ;
+              transition: 0.3s ease-in-out;
+              overflow: hidden;
+              cursor: pointer;
+              // width: 100%;
+              .image {
+                  position: relative;
+                  img{
+                      height: auto;
+                      max-width: 100%;
+                  }
+                  .icons {
+                      position: absolute;
+                      top: 10%;
+                      right: 0%;
+                      .icon {
+                          background-color: white;
+                          padding: 10px;
+                          margin-bottom: 9px;
+                          border: 1px solid rgb(214, 213, 213);
+                          opacity: 0;
+                          visibility: hidden;
+                          transform: translateX(30px);
+                          transition: 0.3s ease-in-out;
+                          color: black;
+                          &:hover{
+                              background-color: #EF4626;
+                              color: white;
+                          }
+                      }
+                  }
+              }
+              .text {
+                  .box1 {
+                      display: block;
+                      margin-top: 15px;
+                      &.title {
+                          font-weight: 600;
+                          text-transform: uppercase;
+                          letter-spacing: 2px;
+                          color: #F26A51;
+                          font-size: 10px;
+                      }
+                      &.super{
+                          font-family: "DM Sans", sans-serif;
+                          font-size: 14px;
+                          font-weight: 600;
+                          transition: 0.3s ease-in-out;
+                          &:hover{
+                              color: #EF4626;
+                          }
+                      }
+                      &.number {
+                          padding-bottom: 5px;
+                          .del {
+                              margin-right: 10px;
+                              color: grey;
+                          }
+                      }
+                  }
+              }
+              &:hover {
+                  .image{
+                      // background-image: url("https://klbtheme.com/cosmetsy/wp-content/uploads/2021/02/pr-13-2.jpg");
+                      // background-repeat: no-repeat;
+                      // background-position: center;
+                      // background-size: cover;
+                      // img{
+                      //     opacity: 0;
+                      //     visibility: hidden;
+                      // }
+                      .icons{
+                          .icon{
+                              opacity: 1;
+                              visibility: visible;
+                              transform: translateX(0px);
+                          }
+                      }
+                  }
+                  
+              }
+          }
+      }
+      
+    }
+  }
 }
