--- a/src/components/CategoryDetail/categoryDetail.scss
+++ b/src/components/CategoryDetail/categoryDetail.scss
@@ -1,6 +1,6 @@
 #categorydetail {
   .top {
-    background-image: url("https://cdn.pixabay.com/photo/2020/01/05/20/06/lipstick-4743984_960_720.jpg");
+    background-image: url("https://cdn.pixabay.com/photo/2013/09/26/23/23/glitter-powder-186829__340.jpg");
     width: 100%;
     height: 500px;
     background-attachment: fixed;
@@ -20,10 +20,10 @@
       height: 500px;
       text-align: center;
       .image {
-        width: 13%;
+        width: 10%;
         margin: auto;
         p {
-          color: #ee2d7a;
+          color: black;
           font-size: 16px;
           opacity: 1;
           margin-top: 20px;
