--- a/src/components/Latest/latest.scss
+++ b/src/components/Latest/latest.scss
@@ -64,6 +64,7 @@
                         font-family: "Crimson Text", serif;;
                         font-size: 20px;
                         transition: 0.3s ease-in-out;
+                        color: black;
                         &:hover{
                             color: #EF4626;
                         }
@@ -71,6 +72,7 @@
                     &.number {
                         padding-bottom: 5px;
                         font-weight: 600;
+                        color: black;
                         .i{
                             margin-right: 10px;
                             color: grey;
