--- a/src/components/Shop/shop.scss
+++ b/src/components/Shop/shop.scss
@@ -1,6 +1,6 @@
 #shop {
   .top {
-    background-image: url("https://cdn.pixabay.com/photo/2020/01/05/20/06/lipstick-4743984_960_720.jpg");
+    background-image: url("https://cdn.pixabay.com/photo/2013/09/26/23/23/glitter-powder-186829__340.jpg");
     width: 100%;
     height: 500px;
     background-attachment: fixed;
@@ -20,13 +20,14 @@
       height: 500px;
       text-align: center;
       .image {
-        width: 13%;
+        width: 8%;
         margin: auto;
         p {
-          color: #ee2d7a;
+          color: color;
           font-size: 16px;
           opacity: 1;
           margin-top: 20px;
+          font-weight: bold;
         }
       }
       .bottom {
@@ -47,7 +48,6 @@
   .bottom {
     .box {
       margin-bottom: 20px;
-
       h4 {
         border-bottom: 2px solid #626262;
         margin-bottom: 1.875rem;
@@ -58,16 +58,23 @@
         padding-bottom: 1.25rem;
         line-height: 1.2;
       }
-
       p {
-        font-size: 17px;
+        font-family: "DM Sans", sans-serif;
+        font-size: 10px;
+        text-transform: uppercase;
       }
     }
     .box2 {
       margin-bottom: 20px;
-      h3 {
-        border-bottom: 2px solid #ed1b6f;
-        padding-bottom: 10px;
+      h4 {
+        border-bottom: 2px solid #626262;
+        margin-bottom: 1.875rem;
+        font-family: "DM Sans", sans-serif;
+        font-size: 0.75rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        padding-bottom: 1.25rem;
+        line-height: 1.2;
       }
 
       .css-187mznn-MuiSlider-root {
@@ -108,7 +115,9 @@
       }
 
       p {
-        font-size: 17px;
+        font-family: "DM Sans", sans-serif;
+        font-size: 10px;
+        text-transform: uppercase;
       }
     }
     .bottom1{
