--- a/src/components/Davines/davines.scss
+++ b/src/components/Davines/davines.scss
@@ -1,12 +1,46 @@
 #davines{
     padding: 20px;
-    img{
-        cursor: pointer;
-        transition: 0.3s ease-in-out;
-        opacity: .2;
-        width: 200px;
-        &:hover{
-            opacity: 1;
+    .containerr{
+        width: 80%;
+        margin: auto;
+        img{
+            cursor: pointer;
+            transition: 0.3s ease-in-out;
+            opacity: .2;
+            width: 200px;
+            &:hover{
+                opacity: 1;
+            }
         }
     }
+   
 }
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {
+    #davines{
+        margin-left: -50px;
+        .containerr{
+            width: 100%;
+            margin: auto;
+            img{
+                margin-top: 10px;
+            }
+        }
+    }
+    
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
