--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -187,3 +187,24 @@
     }
   }
 }
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {
+  #header{
+    display: none;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
