--- a/src/components/CountDown/countDown.scss
+++ b/src/components/CountDown/countDown.scss
@@ -44,16 +44,35 @@
 
 
 
-@media screen  and (max-width : 480px){
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {    
     #countdown{
+        margin-top: 20px;
         .timer-container{
             .timer{
+                display: contents;
+                &:first-child{
+                    width: 100%;
+                }
                 .dene{
-                    margin-left: 2em;
-                    margin-right: 2em;
-                    padding: 3em 1em;
+                    margin-left: 5px;
+                    margin-right: 5px;
                 }
             }
         }
     }
 }
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
