--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -88,3 +88,31 @@
         }
     }
 }
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {    
+    #footer{
+        padding-top: 0px;
+        .bottom{
+            .p{
+                text-align: center;
+            }
+            .span{
+                display: none;
+            }
+        }
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
