--- a/src/components/HomePopular/homePopular.scss
+++ b/src/components/HomePopular/homePopular.scss
@@ -65,3 +65,33 @@
         }
     }
 }
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {   
+    #homepopular{
+        .top{
+            text-align: center;
+            h2{
+                font-size: 32px;
+                margin-bottom: 0px;
+            }
+            p{
+                width: 100%;
+            }
+        }
+    } 
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
