--- a/src/components/Duis/duis.scss
+++ b/src/components/Duis/duis.scss
@@ -383,14 +383,14 @@
             margin-bottom: 1.25rem;
             border-bottom: 1px solid #dee2e6;
         }
-       .image{
+       .imagee{
             margin-left: -5px;
             img{
                 width: 60px;
                 height: 60px;
             }
         }
-        .text{
+        .textt{
             h3{
                 font-size: 14px;
                 font-family: "Crimson Text", serif;
@@ -403,3 +403,41 @@
         }
     }
 }
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {  
+    #duis{
+        .image{
+            margin-left: 0px;
+            margin-top: 15px;
+        }
+        .text{
+            margin-left: 0px;
+            h2{
+                font-size: 27px;
+            }
+        }
+        .boxes6{
+            .textt{
+                margin-left: 10px;
+            }
+        }
+        .box{
+            display: none;
+        }
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
