--- a/src/components/BillingDetails/billingDetails.scss
+++ b/src/components/BillingDetails/billingDetails.scss
@@ -85,3 +85,36 @@
     }
   }
 }
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {  
+  #billingdetails {
+    .bottom {
+      padding: 10px;
+      input {
+        padding: 20px 160px 20px 20px;
+      }
+    }
+    .cart_totals {
+      margin-left: 0px;
+      button {
+        padding: 20px 50px;
+        margin-left: 40px;
+      }
+    }
+  }  
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
