--- a/src/components/CartTotals/cartTotal.scss
+++ b/src/components/CartTotals/cartTotal.scss
@@ -120,3 +120,37 @@
         }
     }
 }
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {    
+    #cartTotal{
+        padding-bottom: 0px;
+        .collaterals{
+            margin-left: 0px;
+            padding: 2rem;
+            .cart_totals{
+                .deneme{
+                    margin-top: 20px;
+                    .shop{
+                        padding-left: 4.5rem;
+                        padding-right: 5.5rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
