--- a/src/components/Etiam/etiam.scss
+++ b/src/components/Etiam/etiam.scss
@@ -24,3 +24,34 @@
         }
     }
 }
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {   
+    #etiam{
+        padding-top: 0px;
+        .text{
+            h2{
+                font-size: 24px;
+            }
+        }
+        .image{
+            margin-top: 20px;
+            img{
+                width: 100%;
+            }
+        }
+    } 
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
