--- a/src/components/Lorem/lorem.scss
+++ b/src/components/Lorem/lorem.scss
@@ -41,3 +41,43 @@
         }
     }
 }
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {    
+    #lorem{
+        margin-bottom: 0px;
+        .box{
+            padding-top: 60px;
+            height: 0px;
+            text-align: center;
+            .image{
+                width: 36%;
+            }
+            .bottom{
+                width: 70%;
+                margin: auto;
+                h1{
+                    color: white;
+                    font-size: 40px;
+                }
+                p{
+                    color: white;
+                }
+            }
+        }
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
