--- a/src/components/Mattis/mattis.scss
+++ b/src/components/Mattis/mattis.scss
@@ -29,3 +29,29 @@
         }
     }
 }
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {  
+    #mattis{
+        padding: 0px;
+        .box{
+            margin-top: 20px;
+        }
+        .box1{
+            margin-top: 20px;
+        }
+    }  
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
