--- a/src/components/Proin/proin.scss
+++ b/src/components/Proin/proin.scss
@@ -27,3 +27,40 @@
         }
     }
 }
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {    
+    #proin{
+        .deneme{
+            position: relative;
+            top: 0%;
+            left: 0%;
+            width: 100%;
+            .box{
+                padding: 10px 0px 0px 10px;
+                .p{
+                    width: 100%;
+                }
+                h4{
+                    font-size: 15px;
+                    font-weight: 600;
+                }
+            }
+        }
+    }
+    
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
