--- a/src/components/Social/social.scss
+++ b/src/components/Social/social.scss
@@ -275,3 +275,45 @@
         }
     }
 }
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {   
+    #social{
+        margin-top: 20px;
+        .image{
+            margin-left: 0px;
+        }
+        .text{
+            margin-left: 0px;
+            h2{
+                font-size: 20px;
+            }
+        }
+        .box{
+            display: none;
+        }
+        .boxes1{
+            margin-top: 0px;
+            margin-left: 10px;
+        }
+        .boxes4{
+            .text{
+                margin-left: 10px;
+            }
+        }
+    } 
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
