--- a/src/components/Ut/ut.scss
+++ b/src/components/Ut/ut.scss
@@ -19,3 +19,36 @@
         margin-top: 60px;
     }
 }
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {    
+    #ut{
+        padding: 0px;
+        .box{
+            margin-top: 0px;
+            margin-left: 0px;
+            h2{
+                font-size: 40px;
+            }
+            p{
+                width: 100%;
+            }
+        }
+        .image{
+            margin-top: 16px;
+        }
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
