--- a/src/components/BrandDetail/brandDetail.scss
+++ b/src/components/BrandDetail/brandDetail.scss
@@ -128,5 +128,62 @@
         }
       }
     }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {
+  #branddetail {
+    .top {
+      .box {
+        padding-top: 70px;
+        .image {
+          width: 30%;
+          p {
+            margin-top: 0px;
+          }
+        }
+        .bottom{
+          width: 80%;
+        }
+      }
+    }
   }
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+  #branddetail {
+    .top {
+      .box {
+        padding-top: 70px;
+        .image {
+          width: 20%;
+          p {
+            margin-top: 0px;
+          }
+        }
+      }
+    }
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+  #branddetail {
+    .top {
+      .box {
+        padding-top: 70px;
+        .image {
+          width: 20%;
+          p {
+            margin-top: 0px;
+          }
+        }
+      }
+    }
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
   
