--- a/src/components/Category/category.scss
+++ b/src/components/Category/category.scss
@@ -107,12 +107,38 @@
 
 // Medium devices (tablets, 768px and up)
 @media(min-width: 576px) and (max-width: 768px) {
-
+    #category{
+        .image{
+         img{
+            margin-top: 10px;
+         }
+        }
+    }
+    #subscribe{
+        .text1{
+            .email{
+                width: 100%;
+            }
+        }
+    }
 }
 
 // Large devices (desktops, 992px and up)
 @media(min-width: 768px) and (max-width: 992px) {
-    
+    #category{
+        .image{
+         img{
+            margin-top: 10px;
+         }
+        }
+    }
+    #subscribe{
+        .text1{
+            .email{
+                width: 100%;
+            }
+        }
+    }
 }
 
 // Extra large devices (large desktops, 1200px and up)
