--- a/src/components/Davines/davines.scss
+++ b/src/components/Davines/davines.scss
@@ -34,12 +34,30 @@
 
 // Medium devices (tablets, 768px and up)
 @media(min-width: 576px) and (max-width: 768px) {
-
+    #davines{
+        margin-left: 0px;
+        .containerr{
+            width: 100%;
+            margin: auto;
+            img{
+                margin-top: 10px;
+            }
+        }
+    }
 }
 
 // Large devices (desktops, 992px and up)
 @media(min-width: 768px) and (max-width: 992px) {
-    
+    #davines{
+        margin-left: 0px;
+        .containerr{
+            width: 100%;
+            margin: auto;
+            img{
+                margin-top: 10px;
+            }
+        }
+    }
 }
 
 // Extra large devices (large desktops, 1200px and up)
