--- a/src/components/Duis/duis.scss
+++ b/src/components/Duis/duis.scss
@@ -431,12 +431,50 @@
 
 // Medium devices (tablets, 768px and up)
 @media(min-width: 576px) and (max-width: 768px) {
-
+    #duis{
+        .image{
+            margin-left: 0px;
+            margin-top: 15px;
+        }
+        .text{
+            margin-left: 0px;
+            h2{
+                font-size: 27px;
+            }
+        }
+        .boxes6{
+            .textt{
+                margin-left: 10px;
+            }
+        }
+        .box{
+            display: none;
+        }
+    }
 }
 
 // Large devices (desktops, 992px and up)
 @media(min-width: 768px) and (max-width: 992px) {
-    
+    #duis{
+        .image{
+            margin-left: 0px;
+            margin-top: 15px;
+        }
+        .text{
+            margin-left: 0px;
+            h2{
+                font-size: 27px;
+            }
+        }
+        .boxes6{
+            .textt{
+                margin-left: 10px;
+            }
+        }
+        .box{
+            display: none;
+        }
+    }
 }
 
 // Extra large devices (large desktops, 1200px and up)
