--- a/src/components/Etiam/etiam.scss
+++ b/src/components/Etiam/etiam.scss
@@ -45,12 +45,38 @@
 
 // Medium devices (tablets, 768px and up)
 @media(min-width: 576px) and (max-width: 768px) {
-
+    #etiam{
+        padding-top: 0px;
+        .text{
+            h2{
+                font-size: 24px;
+            }
+        }
+        .image{
+            margin-top: 20px;
+            img{
+                width: 100%;
+            }
+        }
+    } 
 }
 
 // Large devices (desktops, 992px and up)
 @media(min-width: 768px) and (max-width: 992px) {
-    
+    #etiam{
+        padding-top: 0px;
+        .text{
+            h2{
+                font-size: 24px;
+            }
+        }
+        .image{
+            margin-top: 20px;
+            img{
+                width: 100%;
+            }
+        }
+    } 
 }
 
 // Extra large devices (large desktops, 1200px and up)
