--- a/src/components/Fill/fill.scss
+++ b/src/components/Fill/fill.scss
@@ -111,12 +111,56 @@
 
 // Medium devices (tablets, 768px and up)
 @media(min-width: 576px) and (max-width: 768px) {
-
+    #fill {
+        .bottom {
+            padding: 0px;
+            button {
+                padding: 20px 100px;
+                margin-left: 200px;
+            }
+            input {
+                padding: 20px 500px 20px 20px;
+            }
+    
+            .left {
+                position:relative;
+                right: 0%;
+                top: 2%;
+                width: 100%;
+                h3 {
+                    padding-bottom: 0px;
+                }
+    
+            }
+        }
+    }
 }
 
 // Large devices (desktops, 992px and up)
 @media(min-width: 768px) and (max-width: 992px) {
+    #fill {
+        .bottom {
+            padding: 0px;
+            button {
+                padding: 20px 100px;
+                margin-left: 200px;
+            }
+            input {
+                padding: 20px 500px 20px 20px;
+            }
     
+            .left {
+                position:relative;
+                right: 0%;
+                top: 2%;
+                width: 100%;
+                h3 {
+                    padding-bottom: 0px;
+                }
+    
+            }
+        }
+    }
 }
 
 // Extra large devices (large desktops, 1200px and up)
