--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -198,12 +198,16 @@
 
 // Medium devices (tablets, 768px and up)
 @media(min-width: 576px) and (max-width: 768px) {
-
+  #header{
+    display: none;
+  }
 }
 
 // Large devices (desktops, 992px and up)
 @media(min-width: 768px) and (max-width: 992px) {
-    
+  #header{
+    display: none;
+  }
 }
 
 // Extra large devices (large desktops, 1200px and up)
