--- a/src/components/Mattis/mattis.scss
+++ b/src/components/Mattis/mattis.scss
@@ -45,12 +45,28 @@
 
 // Medium devices (tablets, 768px and up)
 @media(min-width: 576px) and (max-width: 768px) {
-
+    #mattis{
+        padding: 0px;
+        .box{
+            margin-top: 20px;
+        }
+        .box1{
+            margin-top: 20px;
+        }
+    }  
 }
 
 // Large devices (desktops, 992px and up)
 @media(min-width: 768px) and (max-width: 992px) {
-    
+    #mattis{
+        padding: 0px;
+        .box{
+            margin-top: 20px;
+        }
+        .box1{
+            margin-top: 20px;
+        }
+    }  
 }
 
 // Extra large devices (large desktops, 1200px and up)
