--- a/src/components/Popular/popular.scss
+++ b/src/components/Popular/popular.scss
@@ -85,12 +85,36 @@
 
 // Medium devices (tablets, 768px and up)
 @media(min-width: 576px) and (max-width: 768px) {
-
+    #popular{
+        margin-top: 20px;
+        .top{
+            text-align: center;
+            h2{
+                font-size: 32px;
+                margin-bottom: 0px;
+            }
+            p{
+                width: 100%;
+            }
+        }
+    } 
 }
 
 // Large devices (desktops, 992px and up)
 @media(min-width: 768px) and (max-width: 992px) {
-    
+    #popular{
+        margin-top: 20px;
+        .top{
+            text-align: center;
+            h2{
+                font-size: 32px;
+                margin-bottom: 0px;
+            }
+            p{
+                width: 100%;
+            }
+        }
+    } 
 }
 
 // Extra large devices (large desktops, 1200px and up)
