--- a/src/components/SkinCare/skincare.scss
+++ b/src/components/SkinCare/skincare.scss
@@ -93,12 +93,60 @@
 
 // Medium devices (tablets, 768px and up)
 @media(min-width: 576px) and (max-width: 768px) {
-
+    #skincare{
+        padding: 0px;
+        .deneme{
+            .text{
+                padding-bottom: 40px;
+                margin-top: 20px;
+                h5{
+                    font-size: 27px;
+                    color: black;
+                    margin-bottom: 0px;
+                    margin-top: 0px;
+                }
+                .skincare{
+                    font-size: 16px;
+                    margin-bottom: 0px;
+                    margin-top: 10px;
+                }
+                .denemee{
+                    margin-top: 20px;
+                }
+                
+            }
+        }
+        
+    }
 }
 
 // Large devices (desktops, 992px and up)
 @media(min-width: 768px) and (max-width: 992px) {
-    
+    #skincare{
+        padding: 0px;
+        .deneme{
+            .text{
+                padding-bottom: 40px;
+                margin-top: 20px;
+                h5{
+                    font-size: 27px;
+                    color: black;
+                    margin-bottom: 0px;
+                    margin-top: 0px;
+                }
+                .skincare{
+                    font-size: 16px;
+                    margin-bottom: 0px;
+                    margin-top: 10px;
+                }
+                .denemee{
+                    margin-top: 20px;
+                }
+                
+            }
+        }
+        
+    }
 }
 
 // Extra large devices (large desktops, 1200px and up)
