--- a/src/components/Ut/ut.scss
+++ b/src/components/Ut/ut.scss
@@ -42,12 +42,42 @@
 
 // Medium devices (tablets, 768px and up)
 @media(min-width: 576px) and (max-width: 768px) {
-
+    #ut{
+        padding: 0px;
+        .box{
+            margin-top: 0px;
+            margin-left: 0px;
+            h2{
+                font-size: 40px;
+            }
+            p{
+                width: 100%;
+            }
+        }
+        .image{
+            margin-top: 16px;
+        }
+    }
 }
 
 // Large devices (desktops, 992px and up)
 @media(min-width: 768px) and (max-width: 992px) {
-    
+    #ut{
+        padding: 0px;
+        .box{
+            margin-top: 0px;
+            margin-left: 0px;
+            h2{
+                font-size: 40px;
+            }
+            p{
+                width: 100%;
+            }
+        }
+        .image{
+            margin-top: 16px;
+        }
+    }
 }
 
 // Extra large devices (large desktops, 1200px and up)
