--- a/src/components/Wishlist/wishlist.scss
+++ b/src/components/Wishlist/wishlist.scss
@@ -43,3 +43,43 @@
         }
     }
 }
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) { 
+    #wishlist{
+        .box{
+            padding-top: 0px;
+            .image{
+                width: 28%;
+            }
+        }
+    }   
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+    #wishlist{
+        .box{
+            padding-top: 0px;
+            .image{
+                width: 13%;
+            }
+        }
+    }  
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    #wishlist{
+        .box{
+            padding-top: 0px;
+            .image{
+                width: 13%;
+            }
+        }
+    }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
