--- a/src/components/WishlistTotals/wishlistTotal.scss
+++ b/src/components/WishlistTotals/wishlistTotal.scss
@@ -38,68 +38,6 @@
         }
         
     }
-    .collaterals{
-        margin-left: 30px;
-        padding: 2.5rem;
-        border: 1px solid #dee2e6;
-        .cart_totals{
-            h2{
-                font-family: "DM Sans", sans-serif;
-                font-size: 12px;
-                font-weight: 600;
-                text-transform: uppercase;
-                border-bottom: 1px solid #dee2e6;
-                padding-bottom: 1.25rem;
-                margin-bottom: 1.25rem;
-                line-height: 1.2;
-            }
-            table{
-                tbody{
-                    tr{
-                        th{
-                            font-size: .75rem;
-                            font-weight: 600;
-                            text-transform: uppercase;
-                            opacity: .5;
-                            padding-top: 0.625rem;
-                            padding-bottom: 0.625rem;
-                            vertical-align: middle;
-                        }
-                        td{
-                            font-size: 1rem;
-                            padding: 0.75rem;
-                            vertical-align: middle;
-                            padding-top: 1.25rem;
-                            padding-bottom: 1.25rem;
-                            border-left: 0;
-                            border-right: 0;
-                            text-align: left;
-                            padding-left: 100px;
-                        }
-                    }
-                }
-            }
-            .deneme{
-                margin-top: 20px;
-                .shop{
-                    padding-left: 3.5rem;
-                    padding-right: 3.5rem;
-                    padding-top: 13px;
-                    padding-bottom: 15px;
-                    background-color: #EF4626;
-                    color: white;
-                    font-size: 14px;
-                    font-weight: 600;
-                    cursor: pointer;
-                    transition: 0.3s ease-in-out;
-                    &:hover{
-                        color: white;
-                        background-color: black;
-                    }
-                }
-            }
-        }
-    }
     .deneme{
         margin-top: 70px;
         .shop{
@@ -120,3 +58,49 @@
         }
     }
 }
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {    
+    #wishlistTotal{
+        padding-bottom: 0px;
+        .box{
+            table{
+                thead{
+                    tr{
+                        .price{
+                            display: none;
+                        }
+                        
+                    }
+                }
+                tbody{
+                    tr{
+                        .price{
+                            display: none;
+                        }
+                        
+                    }
+                }
+            }
+        }
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media(min-width: 576px) and (max-width: 768px) {
+    #wishlistTotal{
+        padding-bottom: 0px;
+        
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media(min-width: 768px) and (max-width: 992px) {
+    #wishlistTotal{
+        padding-bottom: 0px;
+    }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {}
