--- a/src/components/BrandDetail/brandDetail.scss
+++ b/src/components/BrandDetail/brandDetail.scss
@@ -1,6 +1,6 @@
 #branddetail {
     .top {
-      background-image: url("https://cdn.pixabay.com/photo/2013/09/26/23/23/glitter-powder-186829__340.jpg");
+      background-image: url("https://media.istockphoto.com/photos/woman-shakes-a-large-powder-brush-with-clouds-of-dust-on-a-black-picture-id1324256585?b=1&k=20&m=1324256585&s=170667a&w=0&h=IH3gYrekzCXWXJ3ebCe4N9nUJQZG-tkVL_hqrNqssMo=");
       width: 100%;
       height: 500px;
       background-attachment: fixed;
@@ -23,7 +23,7 @@
           width: 8%;
           margin: auto;
           p {
-            color: black;
+            color: white;
             font-size: 16px;
             opacity: 1;
             margin-top: 20px;
@@ -33,12 +33,12 @@
           width: 60%;
           margin: auto;
           h1 {
-            color: black;
+            color: white;
             font-size: 60px;
           }
           p {
             margin-top: 40px;
-            color: black;
+            color: white;
             font-weight: 600;
           }
         }
