--- a/src/components/BillingDetails/billingDetails.scss
+++ b/src/components/BillingDetails/billingDetails.scss
@@ -1,120 +1,39 @@
-#billingdetails {
-  width: 100%;
-  padding-bottom: 50px;
-  .bottom {
-    background-color: white;
-    opacity: 0.9;
-    z-index: 678887887;
-    padding: 70px;
-    position: relative;
-    h2 {
-      margin-bottom: 20px;
-    }
-
-    input {
-      padding: 20px 350px 20px 20px;
-      margin-bottom: 20px;
-      border: 1px solid rgb(212, 212, 212);
-      outline: none;
-      transition: 0.3s ease-in-out;
-
-      &:hover {
-        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-      }
-    }
-  }
-  .cart_totals {
-    margin-left: 30px;
-    padding: 2.5rem;
-    border: 1px solid #dee2e6;
-    h3 {
-      font-family: "DM Sans", sans-serif;
-      font-size: 12px;
-      font-weight: 600;
-      text-transform: uppercase;
-      border-bottom: 1px solid #dee2e6;
-      padding-bottom: 1.25rem;
-      margin-bottom: 1.25rem;
-      line-height: 1.2;
-    }
-    table {
-      border-bottom: 1px solid #dee2e6;
-      padding-bottom: 1.25rem;
-      margin-bottom: 1.25rem;
-      line-height: 1.2;
-      tbody {
-        tr {
-          th {
-            font-size: 0.75rem;
-            font-weight: 600;
-            text-transform: uppercase;
-            opacity: 0.5;
-            padding-top: 0.625rem;
-            padding-bottom: 0.625rem;
-            vertical-align: middle;
-          }
-          td {
-            font-size: 1rem;
-            padding: 0.75rem;
-            vertical-align: middle;
-            padding-top: 1.25rem;
-            padding-bottom: 1.25rem;
-            border-left: 0;
-            border-right: 0;
-            text-align: left;
-            padding-left: 100px;
-          }
-        }
-      }
-    }
-    
+#contactt {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  .buttonBox {
     button {
-      background-color: black;
-      color: white;
-      padding: 20px 124px;
-      border-radius: 35px;
-      font-weight: bold;
+      margin: 20px;
+      padding: 10px 230px;
       border: none;
-      outline: none;
-      transition: 0.3s ease-in-out;
-
-      &:hover {
-          background-color: #EF4626;
-          color: black;
-      }
+      background-color: #ffcc95;
+      color: black;
+      border-radius: 5px;
     }
   }
 }
 
-
 // Small devices (landscape phones, 576px and up)
-@media (max-width: 576px) {  
-  #billingdetails {
-    .bottom {
-      padding: 10px;
-      input {
-        padding: 20px 160px 20px 20px;
-      }
-    }
-    .cart_totals {
-      margin-left: 0px;
+@media (max-width: 576px) {
+  #contactt {
+    .buttonBox {
       button {
-        padding: 20px 50px;
-        margin-left: 40px;
+        margin: 20px;
+        padding: 10px 100px;
       }
     }
-  }  
+  }
 }
 
 // Medium devices (tablets, 768px and up)
-@media(min-width: 576px) and (max-width: 768px) {
-
+@media (min-width: 576px) and (max-width: 768px) {
 }
 
 // Large devices (desktops, 992px and up)
-@media(min-width: 768px) and (max-width: 992px) {
-    
+@media (min-width: 768px) and (max-width: 992px) {
 }
 
 // Extra large devices (large desktops, 1200px and up)
-@media (max-width: 1200px) {}
+@media (max-width: 1200px) {
+}
