--- a/src/components/CheckOut/checkOut.scss
+++ b/src/components/CheckOut/checkOut.scss
@@ -54,17 +54,29 @@
                 width: 28%;
             }
         }
-    }   
+    }
 }
 
 // Medium devices (tablets, 768px and up)
 @media(min-width: 576px) and (max-width: 768px) {
-
+    #checkout{
+        .box{
+            .image{
+                width: 18%;
+            }
+        }
+    }
 }
 
 // Large devices (desktops, 992px and up)
 @media(min-width: 768px) and (max-width: 992px) {
-    
+    #checkout{
+        .box{
+            .image{
+                width: 18%;
+            }
+        }
+    }
 }
 
 // Extra large devices (large desktops, 1200px and up)
