--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -120,6 +120,33 @@
                 color: #EF4626;
                 font-size: 18px;
               }
+
+              .boxess{
+                .buttonDiv {
+                  width: 90%;
+                  margin: auto;
+  
+                  button {
+                    width: 100%;
+                    padding: 10px 0px;
+                    margin: 10px 0px;
+                    border: 1px solid transparent;
+                    outline: none;
+                    font-weight: 600;
+                    transition: 0.3s ease-in-out;
+  
+                    &.vieww {
+                      background-color: transparent;
+                      border: 1px solid rgb(197, 197, 197);
+                      a{
+                          color: black;
+                          text-decoration: none;
+                      }
+                      
+                    }
+                  }
+                }
+              }
             }
 
             .bottom {
